[gd_scene load_steps=19 format=3 uid="uid://oro7jitvtaoa"]

[ext_resource type="Texture2D" uid="uid://cc60q0nys63y4" path="res://assets/textures/sprites.png" id="1_g7n2o"]
[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="1_ncqvn"]
[ext_resource type="Texture2D" uid="uid://dgh3js4ws0tm6" path="res://resources/sprite/red.atlastex" id="2_ti0x8"]
[ext_resource type="Texture2D" uid="uid://es4rh8d3onvu" path="res://resources/sprite/yellow.atlastex" id="3_1pnf5"]
[ext_resource type="Texture2D" uid="uid://cbejhslhwxckq" path="res://resources/sprite/green.atlastex" id="4_kp7ho"]
[ext_resource type="Texture2D" uid="uid://cyjrnsb4fpi43" path="res://resources/sprite/white.atlastex" id="5_ufa5r"]
[ext_resource type="AudioStream" uid="uid://gqwi5b2hp2rx" path="res://assets/sounds/writing.ogg" id="7_cs3gx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_48rtn"]
atlas = ExtResource("1_g7n2o")
region = Rect2(12, 348, 247, 156)

[sub_resource type="InputEventKey" id="InputEventKey_d0dfw"]
device = -1
keycode = 4194306

[sub_resource type="Shortcut" id="Shortcut_skjay"]
events = [SubResource("InputEventKey_d0dfw")]

[sub_resource type="AtlasTexture" id="AtlasTexture_oew7w"]
atlas = ExtResource("1_g7n2o")
region = Rect2(24, 300, 3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk1qd"]
atlas = ExtResource("1_g7n2o")
region = Rect2(24, 75, 24, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnr4c"]
atlas = ExtResource("1_g7n2o")
region = Rect2(72, 75, 24, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_75aiy"]
atlas = ExtResource("1_g7n2o")
region = Rect2(120, 74, 24, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o6t6"]
atlas = ExtResource("1_g7n2o")
region = Rect2(48, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jx1i"]
atlas = ExtResource("1_g7n2o")
region = Rect2(0, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_76baj"]
atlas = ExtResource("1_g7n2o")
region = Rect2(24, 168, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf8na"]
atlas = ExtResource("1_g7n2o")
region = Rect2(120, 168, 24, 24)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ncqvn")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(988, 624)
layout_mode = 2
texture = SubResource("AtlasTexture_48rtn")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 65
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 65
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Echoes of Amber"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="QuestLabel" type="RichTextLabel" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
visible_characters_behavior = 1

[node name="PlayButton" type="Button" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
shortcut = SubResource("Shortcut_skjay")
shortcut_in_tooltip = false
text = "Continue"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="ControlLabel" type="Label" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label3" type="RichTextLabel" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[img=26x26,center,center]res://resources/sprite/keys/W.atlastex[/img]|[img=26x26,center,center]res://resources/sprite/keys/A.atlastex[/img]|[img=26x26,center,center]res://resources/sprite/keys/S.atlastex[/img]|[img=26x26,center,center]res://resources/sprite/keys/D.atlastex[/img] Move
[img=26x26,center,center]res://resources/sprite/keys/E.atlastex[/img] Harvest leaves (Hold)
[img=26x26,center,center]res://resources/sprite/keys/J.atlastex[/img] Put [img=36x30,center,center]res://resources/sprite/red.atlastex[/img] RED leaves
[img=26x26,center,center]res://resources/sprite/keys/K.atlastex[/img] Put [img=36x30,center,center]res://resources/sprite/yellow.atlastex[/img] ORANGE leaves
[img=26x26,center,center]res://resources/sprite/keys/L.atlastex[/img] Put [img=36x30,center,center]res://resources/sprite/green.atlastex[/img] GREEN leaves"

[node name="RecipeLabel" type="Label" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Recipes"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="RecipeTable" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ti0x8")

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ti0x8")

[node name="TextureRect" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ti0x8")

[node name="ArrowLabel" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oew7w")
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 76)
layout_mode = 2
texture = SubResource("AtlasTexture_rk1qd")

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="TextureRect7" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer2/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1pnf5")

[node name="TextureRect6" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer2/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1pnf5")

[node name="TextureRect5" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer2/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1pnf5")

[node name="ArrowLabel2" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oew7w")
stretch_mode = 5

[node name="TextureRect8" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(48, 76)
layout_mode = 2
texture = SubResource("AtlasTexture_vnr4c")

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="TextureRect11" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer3/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_kp7ho")

[node name="TextureRect10" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer3/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_kp7ho")

[node name="TextureRect9" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer3/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_kp7ho")

[node name="ArrowLabel2" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oew7w")
stretch_mode = 5

[node name="TextureRect12" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(48, 76)
layout_mode = 2
texture = SubResource("AtlasTexture_75aiy")

[node name="ColorRect" type="ColorRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
color = Color(0.148989, 0.148989, 0.148989, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable"]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="TextureRect23" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer3/Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -24.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_ufa5r")

[node name="TextureRect22" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer3/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_kp7ho")

[node name="TextureRect21" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer3/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_kp7ho")

[node name="ArrowLabel2" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oew7w")
stretch_mode = 5

[node name="TextureRect24" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_0o6t6")

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="TextureRect15" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer4/Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -24.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_ufa5r")

[node name="TextureRect14" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer4/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ti0x8")

[node name="TextureRect13" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer4/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ti0x8")

[node name="ArrowLabel2" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oew7w")
stretch_mode = 5

[node name="TextureRect16" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_6jx1i")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="TextureRect19" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer/Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -24.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_ufa5r")

[node name="TextureRect18" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1pnf5")

[node name="TextureRect17" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1pnf5")

[node name="ArrowLabel2" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oew7w")
stretch_mode = 5

[node name="TextureRect20" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_76baj")

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(110, 48)
layout_mode = 2

[node name="TextureRect27" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer2/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_kp7ho")

[node name="TextureRect26" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer2/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1pnf5")

[node name="TextureRect25" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer2/Control"]
custom_minimum_size = Vector2(48, 40)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ti0x8")

[node name="ArrowLabel2" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_oew7w")
stretch_mode = 5

[node name="TextureRect28" type="TextureRect" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer2/RecipeTable/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_jf8na")

[node name="WritingFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_cs3gx")
volume_db = -5.0
bus = &"SoundFx"
